Updated to work with reader accounts and Spaces

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-A WordPress plugin that uses the ScreenSteps Live API to view manuals and lessons in your WordPress pages.
+A WordPress plugin that uses the ScreenSteps Live API to view spaces, manuals, buckets and lessons in your WordPress pages.
